force-app/main/default/objects/X607__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>