force-app/main/default/objects/X607__c/fields/Standard_Comment__c.field-meta.xml
<CustomField>
    <fullName>Standard_Comment__c</fullName>
    <label>Standard Comment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reclassed to meet the needs of the division</fullName>
            </value>
            <value>
                <fullName>Reporting Unit change to meet the needs of the division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>