force-app/main/default/objects/X607__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Tracks the status of the Change in Position through the process</description>
    <inlineHelpText>Select the current status.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>607 Created</fullName>
                <default>true</default>
                <label>607 Created</label>
            </value>
            <value>
                <fullName>Submitted to Budget</fullName>
            </value>
            <value>
                <fullName>Submitted to DOF</fullName>
            </value>
            <value>
                <fullName>Submitted to SCO</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Form 1 Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>