force-app/main/default/objects/X607__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposed New</fullName>
            </value>
            <value>
                <fullName>Extension of Present</fullName>
            </value>
            <value>
                <fullName>Reclassification</fullName>
            </value>
            <value>
                <fullName>Abolishment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reporting Unit Change</fullName>
            </value>
            <value>
                <fullName>Reestablish</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Combine</fullName>
            </value>
            <value>
                <fullName>Disencumbrance</fullName>
            </value>
            <value>
                <fullName>Encumbrance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>