force-app/main/default/objects/X607__c/fields/X607_Position_Primary_Deletion__c.field-meta.xml
<CustomField>
    <fullName>X607_Position_Primary_Deletion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>607 Position Primary Deletion</label>
    <referenceTo>X607_Position_Modification__c</referenceTo>
    <relationshipLabel>607s (607 Position Primary Deletion)</relationshipLabel>
    <relationshipName>X607s1</relationshipName>
    <type>Lookup</type>
</CustomField>